--- a/css/qanda.css
+++ b/css/qanda.css
@@ -36,7 +36,7 @@
 .separator{
 	margin-bottom: 30px;
 	left: 50%;
-	transform: translate(50%);
+	margin-left: 240px;
 }
 
 #submissions{
